--- a/.github/workflows/run-e2e.yml
+++ b/.github/workflows/run-e2e.yml
@@ -14,32 +14,33 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install NPM
-        uses: npm/action-setup@v2
+      - name: Cache node modules
+        uses: actions/cache@v3
         with:
-          version: 8
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-  
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
+
+      - name: Build the application
+        run: npm run build
+
+      - name: Start the application
+        run: npm start &
+        env:
+          APP_URL: "http://localhost:3000"
+          NEXT_PUBLIC_API_BASE_URL: "https://ignite-devstore-api.vercel.app"
+
+      - name: Wait for the application to be ready
+        run: npx wait-on http://localhost:3000
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
-        env: 
-          APP_URL: "http://localhost:3000"
-          NEXT_PUBLIC_API_BASE_URL: "https://ignite-devstore-api.vercel.app"
         with:
-          build: npm run build
-          start: npm start
+          config: |
+            baseUrl=http://localhost:3000
+            video=true
+            screenshotOnRunFailure=true
